--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-input-range": "^1.3.0",
     "react-modal-video": "^2.0.1",
+    "react-paginate": "^8.2.0",
     "react-photoswipe-gallery": "^2.2.7",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.3",
