--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "sass": "^1.68.0",
+    "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1"
   }
