--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@reduxjs/toolkit": "^1.9.6",
     "bootstrap": "^5.2.1",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.4.0",
     "leaflet": "^1.9.4",
     "next": "13.5.4",
+    "nodemailer": "^6.9.8",
     "photoswipe": "^5.4.2",
     "purgecss": "^5.0.0",
     "react": "^18.2.0",
