--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.0",
     "dotenv": "^16.4.0",
     "leaflet": "^1.9.4",
+    "mysql2": "^3.9.1",
     "next": "13.5.4",
     "nodemailer": "^6.9.8",
     "photoswipe": "^5.4.2",
