--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "2.0.0",
     "react-modal-video": "^2.0.1",
+    "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
     "react-photoswipe-gallery": "^2.2.7",
     "react-pro-sidebar": "^1.1.0-alpha.1",
