--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-photoswipe-gallery": "^2.2.7",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "sass": "^1.68.0",
     "serverless-mysql": "^1.5.5",
